<resources>
    <string name="app_name">Movies</string>
    <string name="titleLabel">Title</string>
    <string name="yearOptionalLabel">Year (optional)</string>
    <string name="yearLabel">Year</string>
    <string name="directorOptionalLabel">Director (optional)</string>
    <string name="directorLabel">Director</string>
    <string name="runtimeLabel">Runtime</string>
    <string name="releasedLabel">Released</string>
    <string name="searchText">Search</string>
    <string name="overviewText">Back to overview</string>
    <string name="titleFormat">%1s (%2s)</string>
    <string name="titleRequiredText">Title of movie is required</string>
    <string name="emptyLabelText">No movies in database. Please press the Search button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>