<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SearchFragment">

    <data>
        <variable
            name="viewModel"
            type="cz.utb.fai.ap7mt.moviesapp.ui.SearchViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="false"
            android:text="@string/titleLabel"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.title}" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yearOptionalLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/yearEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.year}" />


        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchText"
            android:layout_marginTop="20sp"/>

    </LinearLayout>
</layout>